--- a/src/Components/Slider.css
+++ b/src/Components/Slider.css
@@ -24,6 +24,8 @@
   position: relative;
   background-color: #dadada;
 }
+
+/*
 .slide-pane__content img
 {
   width: 100%;
@@ -37,3 +39,4 @@
   font-size: x-large;
   font-weight: bolder;
 }
+*/
