--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,10 +1,12 @@
 .about{
-    border-right-width: 60%;
+    
+    
 }
 
 .content{
     text-align: center;
     width: 100%;
+    word-break: break-word; 
     
  
 }
@@ -14,5 +16,9 @@
 }
 
 .p{
+    
+}
+
+title{
     
 }
