--- a/src/CSS/Humidity.css
+++ b/src/CSS/Humidity.css
@@ -4,7 +4,8 @@
 }
 
 .water-image{
-    width: 40%;
+    width: 25%;
+    padding-bottom: 30px;
 }
 
 .current-level-text{
@@ -16,11 +17,20 @@
 .text
 {
   position: absolute;
-  top: 55%;
+  top: 47%;
   font-size: 30px;
   font-weight: bolder;
   color: white;
 }
+
+.chart-container {
+    margin-bottom: 50px;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+
 /*The water drop percentage is laid over the water drop image. The top and left may need to be change 
 depending where the graphic is set on the page*/
 #water-drop-percentage{
@@ -31,6 +41,10 @@ depending where the graphic is set on the page*/
     font-size: 55px;
     font-weight: 600;
     color: white;
+}
+
+.chart-header{
+   padding-left: 10px;
 }
 @media only screen and (min-width: 800px) {
     .current-level-text{
