--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,5 +1,18 @@
+
+#panel
+{
+    position: fixed;
+    top: 0; 
+    left: 0;
+    z-index: 10;
+
+}
+
 .about{
-    
+    position: fixed;
+    top: 0; 
+    left: 0;
+    z-index: 10;
     
 }
 
